keep overlay play initiation concept, but remove play button on waveforms as it clutters up the screen. now there is just a transparent overlay on the waveform, if clicked it plays from 00:00. This is a good solution to the mobile issue with one bug, I noticed that if user clicks any of the play buttons to initiate audio before file has finished loading, the player breaks. Solution: put a 'loading' overlay with semi-transparent backfround over the entire track - covering all of the user interactable controls. this overlay is hooked to a 'ready' listener on the wavesurfer object. when the file is fully decoded and ready to play, the loading overlay is removed and the user can interact with the audio. wavesurfer.on('ready') is what makes this work and it is frankly pretty cool.

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,6 @@
 }
 
 #image-section {
-    /* box-sizing: border-box; */
     width: 100%;
     height: 550px;
     min-width: 375px;
@@ -30,7 +29,6 @@
     height: 550px;
     max-height: 550px;
     transform: ease-in-out 2s;
-    /* background-color: aqua; */
 }
 
 #current-image {
@@ -51,7 +49,6 @@
 }
 
 #advance-button {
-
     border: none;
     background-color: white;
     color: white;
@@ -68,25 +65,66 @@
     box-sizing: border-box;
     width: 100%;
     min-width: 375px;
-    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 40px 0 60px 0;
-    /* background-color: rgb(241, 239, 89); */
+    margin: 40px 0 40px 0;
 }
 
 #track-container {
     box-sizing: border-box;
     width: 100%;
     min-width: 365px;
-    max-width: 65%;
+    max-width: 68%;
 }
 
 .track {
-    margin: 0;
-    margin: 0 0 40px 0;
-    touch-action: none;
+    position: relative;
+    padding: 10px 10px 10px 10px;
+    margin: 0 0 30px 0;
+    box-sizing: border-box;
+}
+
+.initiate-overlay {
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    top: 0;
+}
+
+.load-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    background-color: rgba(143, 143, 143, 0.233);
+    border-radius: 10px;
+    overflow: visible;
+}
+
+.load-box {
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(102, 103, 155);
+    box-shadow: 0 0 25px 28px rgb(102, 103, 155);
+    color: white;
+    width: 80px;
+    height: 30px;
+    border-radius: 25px;
+    text-align: center;
+    justify-content: center;
 }
 
 .track-title {
@@ -98,7 +136,6 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    /* margin: 0 0 40px 0; */
 }
 
 .play-btn {
@@ -140,27 +177,3 @@
 .divider {
     margin: 0;
 }
-
-/* OLD CODE STYLE */
-/* .audio-unit {
-    box-sizing: border-box;
-    width: 100%;
-    min-width: 365px;
-    max-width: 65%;
-    margin: 20px 0 20px 0;
-}
-
-.audio-player {
-    margin: 10px 0 0 0;
-    width: 100%;
-}
-
-audio::-webkit-media-controls-panel {
-    background-color: rgb(202, 231, 192);
-}
-
-.audio-unit-label {
-    margin: 0 0 20px 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-} */
